lagt till errorhandling

--- a/transform_news_2/clean_news_notebook.ipynb
+++ b/transform_news_2/clean_news_notebook.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "    # Check if DataFrame is empty and raise an error if needed\n",
     "    if df.empty:\n",
-    "        raise ValueError(\"No unprocessed data found\")\n",
+    "        return None, None\n",
     "\n",
     "    # Create a comma-separated string of unique IDs\n",
     "    processed_id_list = df[\"unique_id\"].to_list()\n",
@@ -492,50 +492,6 @@
     "        print(f\"Errors: {job.errors}\")\n",
     "    else:\n",
     "        return f'{job.output_rows} rader sparades till {table}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_news_2(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "        Cleans and transforms raw news data extracted from BigQuery into a structured DataFrame format.\n",
-    "\n",
-    "    This function takes a DataFrame containing raw news data, unpacks JSON-like structures to separate rows \n",
-    "    for each news article, and normalizes the data into a flat table format. The resulting DataFrame will have \n",
-    "    one row per article with relevant information such as author, description, publication date, title, URL, \n",
-    "    source, company, and sentiment scores.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    # Förbered DataFrame\n",
-    "    # Se till att 'data' kolumnen är en lista av artiklar\n",
-    "    df['data'] = df['data'].apply(lambda x: x.get(\n",
-    "        'articles', []) if isinstance(x, dict) else [])\n",
-    "\n",
-    "    # Explodera artiklar till separata rader\n",
-    "    df_exploded = df.explode('data')\n",
-    "\n",
-    "    # Normalisera JSON-data i 'data' kolumnen\n",
-    "    articles_df = pd.json_normalize(df_exploded['data'])\n",
-    "\n",
-    "    # Lägg till övriga kolumner\n",
-    "    # Kombinera normaliserad artikeldata med 'company' kolumnen\n",
-    "    final_df = pd.concat(\n",
-    "        [articles_df, df_exploded[['company']].reset_index(drop=True)], axis=1)\n",
-    "\n",
-    "    # final_df.drop(columns=['content', 'source.id', 'urlToImage'], inplace=True)\n",
-    "\n",
-    "    # final_df['publishedAt'] = pd.to_datetime(\n",
-    "    #     final_df['publishedAt'], format='%Y-%m-%dT%H:%M:%SZ', utc=True)\n",
-    "\n",
-    "    # final_df.rename(columns={\"source.name\": \"source_name\",\n",
-    "    #                          \"publishedAt\": \"pub_date\"},\n",
-    "    #                 inplace=True\n",
-    "    #                 )\n",
-    "    return final_df"
    ]
   },
   {
@@ -825,6 +781,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1725019545.465053 7426783 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n",
+      "/Users/tomasrydenstam/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/_pandas_helpers.py:207: UserWarning: Unable to determine type for field 'data'.\n",
+      "  warnings.warn(\"Unable to determine type for field '{}'.\".format(bq_field.name))\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Must pass schema, or at least one RecordBatch",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[156], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df, ids \u001b[38;5;241m=\u001b[39m \u001b[43mget_raw_news_from_big_query\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mraw_news_with_uuid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtomastestproject-433206\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtestdb_1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[124], line 53\u001b[0m, in \u001b[0;36mget_raw_news_from_big_query\u001b[0;34m(table, project_id, dataset)\u001b[0m\n\u001b[1;32m     50\u001b[0m results \u001b[38;5;241m=\u001b[39m query_job\u001b[38;5;241m.\u001b[39mresult()\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Convert results to a DataFrame\u001b[39;00m\n\u001b[0;32m---> 53\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mresults\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# Check if DataFrame is empty and raise an error if needed\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df\u001b[38;5;241m.\u001b[39mempty:\n",
+      "File \u001b[0;32m~/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/table.py:2379\u001b[0m, in \u001b[0;36mRowIterator.to_dataframe\u001b[0;34m(self, bqstorage_client, dtypes, progress_bar_type, create_bqstorage_client, geography_as_object, bool_dtype, int_dtype, float_dtype, string_dtype, date_dtype, datetime_dtype, time_dtype, timestamp_dtype, range_date_dtype, range_datetime_dtype, range_timestamp_dtype)\u001b[0m\n\u001b[1;32m   2376\u001b[0m     create_bqstorage_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m   2377\u001b[0m     bqstorage_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 2379\u001b[0m record_batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_arrow\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2380\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprogress_bar_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprogress_bar_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2381\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbqstorage_client\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbqstorage_client\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2382\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_bqstorage_client\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcreate_bqstorage_client\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2383\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2385\u001b[0m \u001b[38;5;66;03m# Default date dtype is `db_dtypes.DateDtype()` that could cause out of bounds error,\u001b[39;00m\n\u001b[1;32m   2386\u001b[0m \u001b[38;5;66;03m# when pyarrow converts date values to nanosecond precision. To avoid the error, we\u001b[39;00m\n\u001b[1;32m   2387\u001b[0m \u001b[38;5;66;03m# set the date_as_object parameter to True, if necessary.\u001b[39;00m\n\u001b[1;32m   2388\u001b[0m date_as_object \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "File \u001b[0;32m~/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/table.py:1974\u001b[0m, in \u001b[0;36mRowIterator.to_arrow\u001b[0;34m(self, progress_bar_type, bqstorage_client, create_bqstorage_client)\u001b[0m\n\u001b[1;32m   1967\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1968\u001b[0m     \u001b[38;5;66;03m# No records (not record_batches), use schema based on BigQuery schema\u001b[39;00m\n\u001b[1;32m   1969\u001b[0m     \u001b[38;5;66;03m# **or**\u001b[39;00m\n\u001b[1;32m   1970\u001b[0m     \u001b[38;5;66;03m# we used the REST API (bqstorage_client is None),\u001b[39;00m\n\u001b[1;32m   1971\u001b[0m     \u001b[38;5;66;03m# which doesn't add arrow extension metadata, so we let\u001b[39;00m\n\u001b[1;32m   1972\u001b[0m     \u001b[38;5;66;03m# `bq_to_arrow_schema` do it.\u001b[39;00m\n\u001b[1;32m   1973\u001b[0m     arrow_schema \u001b[38;5;241m=\u001b[39m _pandas_helpers\u001b[38;5;241m.\u001b[39mbq_to_arrow_schema(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_schema)\n\u001b[0;32m-> 1974\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpyarrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_batches\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrecord_batches\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mschema\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43marrow_schema\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/pyarrow/table.pxi:4858\u001b[0m, in \u001b[0;36mpyarrow.lib.Table.from_batches\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Must pass schema, or at least one RecordBatch"
+     ]
+    }
+   ],
+   "source": [
+    "df, ids = get_raw_news_from_big_query(\n",
+    "    table='raw_news_with_uuid', project_id='tomastestproject-433206', dataset='testdb_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 155,
    "metadata": {},
    "outputs": [],
@@ -842,23 +833,6 @@
     "rows_written = write_clean_news_to_bq(data=dff, table='clean_news_copy')\n",
     "\n",
     "update_is_processed(id_string=ids, table='raw_news_with_uuid')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame har sparats till BigQuery utan fel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "write_clean_news_to_bq(clean_df)"
    ]
   },
   {
