försöker göra om och rätt

--- a/transform_news_2/clean_news_notebook.ipynb
+++ b/transform_news_2/clean_news_notebook.ipynb
@@ -781,37 +781,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1725019545.465053 7426783 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n",
-      "/Users/tomasrydenstam/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/_pandas_helpers.py:207: UserWarning: Unable to determine type for field 'data'.\n",
-      "  warnings.warn(\"Unable to determine type for field '{}'.\".format(bq_field.name))\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Must pass schema, or at least one RecordBatch",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[156], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df, ids \u001b[38;5;241m=\u001b[39m \u001b[43mget_raw_news_from_big_query\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mraw_news_with_uuid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtomastestproject-433206\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtestdb_1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[124], line 53\u001b[0m, in \u001b[0;36mget_raw_news_from_big_query\u001b[0;34m(table, project_id, dataset)\u001b[0m\n\u001b[1;32m     50\u001b[0m results \u001b[38;5;241m=\u001b[39m query_job\u001b[38;5;241m.\u001b[39mresult()\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Convert results to a DataFrame\u001b[39;00m\n\u001b[0;32m---> 53\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mresults\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_dataframe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# Check if DataFrame is empty and raise an error if needed\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m df\u001b[38;5;241m.\u001b[39mempty:\n",
-      "File \u001b[0;32m~/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/table.py:2379\u001b[0m, in \u001b[0;36mRowIterator.to_dataframe\u001b[0;34m(self, bqstorage_client, dtypes, progress_bar_type, create_bqstorage_client, geography_as_object, bool_dtype, int_dtype, float_dtype, string_dtype, date_dtype, datetime_dtype, time_dtype, timestamp_dtype, range_date_dtype, range_datetime_dtype, range_timestamp_dtype)\u001b[0m\n\u001b[1;32m   2376\u001b[0m     create_bqstorage_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m   2377\u001b[0m     bqstorage_client \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 2379\u001b[0m record_batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_arrow\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   2380\u001b[0m \u001b[43m    \u001b[49m\u001b[43mprogress_bar_type\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mprogress_bar_type\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2381\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbqstorage_client\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbqstorage_client\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2382\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_bqstorage_client\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcreate_bqstorage_client\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   2383\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2385\u001b[0m \u001b[38;5;66;03m# Default date dtype is `db_dtypes.DateDtype()` that could cause out of bounds error,\u001b[39;00m\n\u001b[1;32m   2386\u001b[0m \u001b[38;5;66;03m# when pyarrow converts date values to nanosecond precision. To avoid the error, we\u001b[39;00m\n\u001b[1;32m   2387\u001b[0m \u001b[38;5;66;03m# set the date_as_object parameter to True, if necessary.\u001b[39;00m\n\u001b[1;32m   2388\u001b[0m date_as_object \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "File \u001b[0;32m~/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/table.py:1974\u001b[0m, in \u001b[0;36mRowIterator.to_arrow\u001b[0;34m(self, progress_bar_type, bqstorage_client, create_bqstorage_client)\u001b[0m\n\u001b[1;32m   1967\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1968\u001b[0m     \u001b[38;5;66;03m# No records (not record_batches), use schema based on BigQuery schema\u001b[39;00m\n\u001b[1;32m   1969\u001b[0m     \u001b[38;5;66;03m# **or**\u001b[39;00m\n\u001b[1;32m   1970\u001b[0m     \u001b[38;5;66;03m# we used the REST API (bqstorage_client is None),\u001b[39;00m\n\u001b[1;32m   1971\u001b[0m     \u001b[38;5;66;03m# which doesn't add arrow extension metadata, so we let\u001b[39;00m\n\u001b[1;32m   1972\u001b[0m     \u001b[38;5;66;03m# `bq_to_arrow_schema` do it.\u001b[39;00m\n\u001b[1;32m   1973\u001b[0m     arrow_schema \u001b[38;5;241m=\u001b[39m _pandas_helpers\u001b[38;5;241m.\u001b[39mbq_to_arrow_schema(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_schema)\n\u001b[0;32m-> 1974\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpyarrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_batches\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrecord_batches\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mschema\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43marrow_schema\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/pyarrow/table.pxi:4858\u001b[0m, in \u001b[0;36mpyarrow.lib.Table.from_batches\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Must pass schema, or at least one RecordBatch"
+      "I0000 00:00:1725027015.377527 7426783 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n"
      ]
     }
    ],
    "source": [
     "df, ids = get_raw_news_from_big_query(\n",
-    "    table='raw_news_with_uuid', project_id='tomastestproject-433206', dataset='testdb_1')"
+    "    table='raw_news_data', project_id='tomastestproject-433206', dataset='testdb_1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_is_processed(id_string=ids, table='raw_news_data')"
    ]
   },
   {
@@ -844,39 +836,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tomasrydenstam/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/table.py:1727: UserWarning: BigQuery Storage module not found, fetch data with the REST endpoint instead.\n",
-      "  warnings.warn(\n",
-      "/Users/tomasrydenstam/Desktop/Skola/test_project/testv/lib/python3.12/site-packages/google/cloud/bigquery/_pandas_helpers.py:207: UserWarning: Unable to determine type for field 'data'.\n",
-      "  warnings.warn(\"Unable to determine type for field '{}'.\".format(bq_field.name))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                              unique_id  \\\n",
-      "0  142a1c6c-4943-452a-8d09-46d3d61007bf   \n",
-      "1  ec82340a-3a50-4e7d-af11-2f78b2878dbc   \n",
-      "2  1983a15a-e23b-481c-98d6-0785ae1358e3   \n",
-      "3  7ec7b81a-a5d6-4ef8-8d8e-fe68b212870c   \n",
-      "4  de325a15-d2ca-4703-b459-7824fb59dada   \n",
-      "\n",
-      "                                                data  \n",
-      "0  {'articles': [{'author': 'Trefis Team, Contrib...  \n",
-      "1  {'articles': [{'author': 'Trefis Team, Contrib...  \n",
-      "2  {'articles': [{'author': 'Trefis Team, Contrib...  \n",
-      "3  {'articles': [{'author': 'Trefis Team, Contrib...  \n",
-      "4  {'articles': [{'author': None, 'content': 'Pos...  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from google.cloud import bigquery\n",
     "import pandas as pd  # Importera pandas för att hantera DataFrames\n",
@@ -888,18 +850,42 @@
     "# SQL-fråga för att hämta data från tabellen\n",
     "query = \"\"\" \n",
     "SELECT unique_id, data \n",
-    "FROM `tomastestproject-433206.testdb_1.raw_news_with_uuid`\n",
+    "FROM `tomastestproject-433206.testdb_1.raw_news_data`\n",
     "WHERE is_processed IS FALSE\n",
     "\"\"\"\n",
+    "# query_2=\"\"\"\n",
+    "# UPDATE `tomastestproject-433206.testdb_1.raw_news_with_uuid` SET is_processed = TRUE WHERE is_processed IS null\n",
     "\n",
+    "\n",
+    "# \"\"\"\n",
     "# Kör frågan\n",
     "job = client.query(query)\n",
     "\n",
     "# Vänta på att jobbet ska slutföras och hämta resultaten som en DataFrame\n",
-    "df = job.to_dataframe()\n",
+    "# df = job.to_dataframe()\n",
     "\n",
     "# Visa de första raderna i DataFrame\n",
-    "print(df.head())"
+    "# print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "job.result().total_rows"
    ]
   },
   {
@@ -1077,6 +1063,53 @@
    "outputs": [],
    "source": [
     "update_is_processed(id_string=stttrr, table='raw_news_with_uuid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transfer_ids_to_meta_data(table_from='raw_news_data', table_to='raw_news_meta_data', project_id='tomastestproject-433206', dataset='testdb_1', secret='bigquery-accout-secret'):\n",
+    "    try:\n",
+    "        # Initiera BigQuery-klienten\n",
+    "\n",
+    "        client = bigquery.Client.from_service_account_json(\n",
+    "            '/Users/tomasrydenstam/Desktop/Skola/test_project/transform_news_2/tomastestproject-433206-adc5bc090976.json')\n",
+    "\n",
+    "        # Definiera din dataset och tabell\n",
+    "        meta_data_table = f\"{project_id}.{dataset}.{table_to}\"\n",
+    "        raw_data_table = f\"{project_id}.{dataset}.{table_from}\"\n",
+    "        query = f\"\"\"\n",
+    "                    INSERT INTO `{meta_data_table}` (unique_id, is_processed)\n",
+    "                    SELECT unique_id, FALSE\n",
+    "                    FROM `{raw_data_table}`\n",
+    "                    WHERE unique_id NOT IN (\n",
+    "                    SELECT unique_id\n",
+    "                    FROM `{meta_data_table}`)\n",
+    "                \"\"\"\n",
+    "        # Infoga data till BigQuery\n",
+    "        errors = client.query(query)\n",
+    "\n",
+    "        # Kontrollera om det blev fel vid infogning\n",
+    "        if errors:\n",
+    "            print(f\"Errors: {errors}\")\n",
+    "            raise RuntimeError(f\"Failed to insert rows: {errors}\")\n",
+    "        else:\n",
+    "            print(\"Data successfully inserted.\")\n",
+    "\n",
+    "    # except NotFound:\n",
+    "    #     print(f\"Error: The table {meta_data_table} was not found.\")\n",
+    "    #     raise\n",
+    "\n",
+    "    # except GoogleAPIError as e:\n",
+    "    #     print(f\"Google API Error: {e}\")\n",
+    "    #     raise\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred: {e}\")\n",
+    "        raise"
    ]
   }
  ],
