--- a/transform_news_2/clean_news_notebook.ipynb
+++ b/transform_news_2/clean_news_notebook.ipynb
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,27 +1089,353 @@
     "                    SELECT unique_id\n",
     "                    FROM `{meta_data_table}`)\n",
     "                \"\"\"\n",
-    "        # Infoga data till BigQuery\n",
+    "\n",
     "        errors = client.query(query)\n",
     "\n",
-    "        # Kontrollera om det blev fel vid infogning\n",
-    "        if errors:\n",
-    "            print(f\"Errors: {errors}\")\n",
-    "            raise RuntimeError(f\"Failed to insert rows: {errors}\")\n",
-    "        else:\n",
-    "            print(\"Data successfully inserted.\")\n",
+    "    except NotFound:\n",
+    "        print(f\"Error: The table {meta_data_table} was not found.\")\n",
+    "        raise\n",
     "\n",
-    "    # except NotFound:\n",
-    "    #     print(f\"Error: The table {meta_data_table} was not found.\")\n",
-    "    #     raise\n",
-    "\n",
-    "    # except GoogleAPIError as e:\n",
-    "    #     print(f\"Google API Error: {e}\")\n",
-    "    #     raise\n",
+    "    except GoogleAPIError as e:\n",
+    "        print(f\"Google API Error: {e}\")\n",
+    "        raise\n",
     "\n",
     "    except Exception as e:\n",
     "        print(f\"An unexpected error occurred: {e}\")\n",
     "        raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asd = transfer_ids_to_meta_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1725042354.889144 7426783 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2260b501-7b08-4807-94a5-dfedce28dde4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>476e0453-2746-4128-afef-89cb2f6c162b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>058ab43e-c98f-4923-9635-32d03682a194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>981f711c-dacc-4126-bc9e-4b9678ea9f76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1954ea9f-280b-4433-8707-75cfa8659c73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>7905cefb-5ac4-4c17-9153-8f87359cf245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>6de10562-9341-4ddb-b6c8-2bb86eec7f31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>02d439c5-4356-4b36-a8e7-e615f20c7b1f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>4aab533c-842e-41a0-a222-ee4d0c3cea52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>93ab79fe-c813-4ef5-a0bb-976af0b62ea8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>119 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                unique_id\n",
+       "0    2260b501-7b08-4807-94a5-dfedce28dde4\n",
+       "1    476e0453-2746-4128-afef-89cb2f6c162b\n",
+       "2    058ab43e-c98f-4923-9635-32d03682a194\n",
+       "3    981f711c-dacc-4126-bc9e-4b9678ea9f76\n",
+       "4    1954ea9f-280b-4433-8707-75cfa8659c73\n",
+       "..                                    ...\n",
+       "114  7905cefb-5ac4-4c17-9153-8f87359cf245\n",
+       "115  6de10562-9341-4ddb-b6c8-2bb86eec7f31\n",
+       "116  02d439c5-4356-4b36-a8e7-e615f20c7b1f\n",
+       "117  4aab533c-842e-41a0-a222-ee4d0c3cea52\n",
+       "118  93ab79fe-c813-4ef5-a0bb-976af0b62ea8\n",
+       "\n",
+       "[119 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asd.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_raw_news_from_big_query(raw_data_table='raw_news_data', meta_data_table='raw_news_meta_data', project_id='tomastestproject-433206', dataset='testdb_1'):\n",
+    "    \"\"\"\n",
+    "    Fetches unprocessed raw news data from a specified BigQuery table and returns it as a pandas DataFrame \n",
+    "    along with a string of row IDs that were used.\n",
+    "\n",
+    "    This function connects to Google BigQuery using credentials from a service account, constructs and executes \n",
+    "    an SQL query to select rows where `is_processed` is FALSE from the specified table within the provided \n",
+    "    dataset and project. The results are returned as a pandas DataFrame. It also extracts the `unique_id` from \n",
+    "    the DataFrame and compiles them into a comma-separated string format for further processing.\n",
+    "\n",
+    "    Args:\n",
+    "        table (str): The name of the table in BigQuery to fetch data from. Default is 'raw_news'.\n",
+    "        project_id (str): The Google Cloud project ID where the BigQuery dataset is located. Default is 'tomastestproject-433206'.\n",
+    "        dataset (str): The BigQuery dataset name that contains the table. Default is 'testdb_1'.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame containing the unprocessed raw news data.\n",
+    "        str: A string of `unique_id`s from the fetched rows, formatted as comma-separated values in single quotes.\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError: If no unprocessed data is found in the table.xw\n",
+    "    \"\"\"\n",
+    "\n",
+    "    client = bigquery.Client.from_service_account_json(\n",
+    "        '/Users/tomasrydenstam/Desktop/Skola/test_project/transform_news_2/tomastestproject-433206-adc5bc090976.json')\n",
+    "\n",
+    "    raw_data_table_id = f\"{project_id}.{dataset}.{raw_data_table}\"\n",
+    "    meta_data_table_id = f\"{project_id}.{dataset}.{meta_data_table}\"\n",
+    "\n",
+    "    # Build your SQL query\n",
+    "    query = f\"\"\"\n",
+    "        SELECT unique_id, data,company\n",
+    "        FROM `{raw_data_table_id}`\n",
+    "        WHERE unique_id IN (SELECT unique_id FROM `{meta_data_table_id}` WHERE is_processed IS FALSE)\n",
+    "        \"\"\"\n",
+    "\n",
+    "    # Execute the SQL query\n",
+    "    query_job = client.query(query)\n",
+    "\n",
+    "    # Fetch the results\n",
+    "    results = query_job.result()\n",
+    "\n",
+    "    # Convert results to a DataFrame\n",
+    "    df = results.to_dataframe()\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1725080798.727240 7426783 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_df = get_raw_news_from_big_query()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>data</th>\n",
+       "      <th>company</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2260b501-7b08-4807-94a5-dfedce28dde4</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>476e0453-2746-4128-afef-89cb2f6c162b</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>058ab43e-c98f-4923-9635-32d03682a194</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>981f711c-dacc-4126-bc9e-4b9678ea9f76</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1954ea9f-280b-4433-8707-75cfa8659c73</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"applech2\",\"content\":\"A...</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>b83338ba-820d-490d-8255-c8101e820f2f</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Rocio Fabbro\",\"content...</td>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>a8f4664c-d4f5-41c8-ad66-1a0842cefc86</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Rocio Fabbro\",\"content...</td>\n",
+       "      <td>GOOGL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>cf6d1eca-e44a-46a2-915c-f3d9fbde60f4</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"William Gavin\",\"conten...</td>\n",
+       "      <td>MSFT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>073b2365-cb48-423b-8148-bb1477d64432</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Asra Isar\",\"content\":\"...</td>\n",
+       "      <td>AMZN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>c8079b9f-b2ea-4c3c-9fc2-770e94d63851</td>\n",
+       "      <td>{\"articles\":[{\"author\":\"Trefis Team, Contribut...</td>\n",
+       "      <td>TSLA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>124 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                unique_id  \\\n",
+       "0    2260b501-7b08-4807-94a5-dfedce28dde4   \n",
+       "1    476e0453-2746-4128-afef-89cb2f6c162b   \n",
+       "2    058ab43e-c98f-4923-9635-32d03682a194   \n",
+       "3    981f711c-dacc-4126-bc9e-4b9678ea9f76   \n",
+       "4    1954ea9f-280b-4433-8707-75cfa8659c73   \n",
+       "..                                    ...   \n",
+       "119  b83338ba-820d-490d-8255-c8101e820f2f   \n",
+       "120  a8f4664c-d4f5-41c8-ad66-1a0842cefc86   \n",
+       "121  cf6d1eca-e44a-46a2-915c-f3d9fbde60f4   \n",
+       "122  073b2365-cb48-423b-8148-bb1477d64432   \n",
+       "123  c8079b9f-b2ea-4c3c-9fc2-770e94d63851   \n",
+       "\n",
+       "                                                  data company  \n",
+       "0    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...    AAPL  \n",
+       "1    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...    AAPL  \n",
+       "2    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...    AAPL  \n",
+       "3    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...    AAPL  \n",
+       "4    {\"articles\":[{\"author\":\"applech2\",\"content\":\"A...    AAPL  \n",
+       "..                                                 ...     ...  \n",
+       "119  {\"articles\":[{\"author\":\"Rocio Fabbro\",\"content...    AAPL  \n",
+       "120  {\"articles\":[{\"author\":\"Rocio Fabbro\",\"content...   GOOGL  \n",
+       "121  {\"articles\":[{\"author\":\"William Gavin\",\"conten...    MSFT  \n",
+       "122  {\"articles\":[{\"author\":\"Asra Isar\",\"content\":\"...    AMZN  \n",
+       "123  {\"articles\":[{\"author\":\"Trefis Team, Contribut...    TSLA  \n",
+       "\n",
+       "[124 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df"
    ]
   }
  ],
